--- a/index.html
+++ b/index.html
@@ -3,45 +3,37 @@
 <head>
     <title>Ahmed Abdulrahman | Finance & Data</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Fonts -->
+    <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- Core CSS -->
+    <!-- HTML5 UP base -->
     <link rel="stylesheet" href="assets/css/main.css" />
 
     <style>
-        :root {
-            --navy: #0B1F3A;
-            --navy-dark: #09182F;
-            --accent: #2F6BFF;
-            --sidebar-text: #E5EDFF;
-            --sidebar-muted: #9FB2D9;
-            --section-bg: #F7F9FB;
-        }
-
+        /* ===== GLOBAL RESET ===== */
         body {
             font-family: 'Inter', sans-serif;
         }
 
-        /* =====================
-           SIDEBAR
-        ===================== */
+        ul {
+            list-style-position: outside;
+        }
 
+        /* ===== SIDEBAR (LOCKED) ===== */
         #header {
             width: 300px;
-            background: var(--navy);
-            border-right: 1px solid rgba(255,255,255,0.06);
+            background: #0B1F3A;
+        }
+
+        #main {
+            margin-left: 300px;
         }
 
         #logo {
-            padding: 2em 1.5em 1.2em 1.5em;
+            padding: 2em 1.5em 1em 1.5em;
             text-align: left;
-        }
-
-        #logo .image {
-            margin-bottom: 1em;
         }
 
         #logo img {
@@ -49,42 +41,33 @@
             height: 96px;
             border-radius: 50%;
             object-fit: cover;
+            margin-bottom: 0.75em;
         }
 
         #logo h1 {
             font-size: 1.25rem;
-            color: var(--accent);
-            margin-bottom: 0.25em;
+            color: #2F6BFF;
+            margin: 0;
         }
 
         #logo p {
             font-size: 0.85rem;
-            color: var(--sidebar-muted);
+            color: #B7C5E6;
+            margin-top: 0.35em;
             line-height: 1.4;
         }
 
+        #nav ul {
+            margin-top: 1em;
+        }
+
         #nav ul li a {
-            color: var(--sidebar-text);
+            color: #E5EDFF;
         }
 
-        /* =====================
-           MAIN LAYOUT
-        ===================== */
-
-        #main {
-            margin-left: 300px;
-        }
-
-        section {
-            padding: 3em 0;
-        }
-
-        /* =====================
-           HERO
-        ===================== */
-
+        /* ===== HERO ===== */
         #top {
-            background: linear-gradient(135deg, var(--navy) 0%, var(--navy-dark) 100%);
+            background: linear-gradient(135deg, #0E2342, #09182F);
             color: white;
             text-align: center;
             padding: 4em 0 3em 0;
@@ -100,29 +83,16 @@
             margin-top: 0.4em;
         }
 
-        .hero-credentials {
+        .hero-meta {
             font-size: 0.9rem;
-            color: #cbd6f0;
+            color: #C6D3F0;
             margin-top: 0.3em;
         }
 
-        .hero-button {
-            margin-top: 1.8em;
-            background: var(--accent);
-            color: white;
-            padding: 0.75em 1.4em;
-            border-radius: 6px;
-            display: inline-block;
-            font-size: 0.9rem;
-            text-decoration: none;
-        }
-
-        /* =====================
-           EXPERIENCE
-        ===================== */
-
+        /* ===== EXPERIENCE ===== */
         #experience {
-            background: var(--section-bg);
+            background: #F7F9FB;
+            padding: 3em 0;
         }
 
         .experience-list {
@@ -132,9 +102,9 @@
 
         .experience-item {
             display: grid;
-            grid-template-columns: 72px 1fr;
+            grid-template-columns: 88px 1fr;
             gap: 1.2em;
-            padding: 1.1em 0;
+            padding: 1em 0;
             border-bottom: 1px solid #E5E7EB;
         }
 
@@ -142,8 +112,15 @@
             border-bottom: none;
         }
 
+        .experience-logo {
+            display: flex;
+            align-items: flex-start;
+            justify-content: center;
+        }
+
         .experience-logo img {
-            width: 56px;
+            width: 72px;
+            height: auto;
             object-fit: contain;
         }
 
@@ -156,7 +133,7 @@
         .experience-content .role {
             font-size: 0.9rem;
             color: #444;
-            margin-bottom: 0.45em;
+            margin: 0.2em 0 0.45em 0;
         }
 
         .experience-content ul {
@@ -170,43 +147,35 @@
             margin-bottom: 0.25em;
         }
 
-        /* =====================
-           PROJECTS
-        ===================== */
-
+        /* ===== PROJECTS ===== */
         #projects {
             background: white;
+            padding: 3em 0;
         }
 
         .projects-grid {
+            max-width: 900px;
+            margin: 0 auto;
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             gap: 1.5em;
-            max-width: 900px;
-            margin: 0 auto;
         }
 
         .project-card {
-            background: #f5f7fb;
+            background: #F5F7FB;
             padding: 1.4em;
             border-radius: 10px;
         }
 
-        .project-card h4 {
-            margin-bottom: 0.4em;
-        }
-
-        /* =====================
-           CONTACT
-        ===================== */
-
+        /* ===== CONTACT ===== */
         #contact {
-            background: var(--section-bg);
+            background: #F7F9FB;
             text-align: center;
+            padding: 2.5em 0;
         }
 
         #contact a {
-            color: var(--accent);
+            color: #2F6BFF;
             font-weight: 500;
             text-decoration: none;
         }
@@ -219,9 +188,7 @@
 <div id="header">
     <div class="top">
         <div id="logo">
-            <span class="image">
-                <img src="images/avatar.png" alt="Ahmed Abdulrahman" />
-            </span>
+            <img src="images/headshot.png" alt="Ahmed Abdulrahman">
             <h1>Ahmed Abdulrahman</h1>
             <p>Finance • Data Analytics<br>CFA Level I</p>
         </div>
@@ -244,8 +211,7 @@
     <div class="container">
         <h1 class="hero-name">Ahmed Abdulrahman</h1>
         <p class="hero-subtitle">Portfolio Analytics • Financial Modeling • Data-Driven Investing</p>
-        <p class="hero-credentials">Rotman Commerce • CFA Level I • Capital Markets</p>
-        <a href="#projects" class="hero-button">View Projects</a>
+        <p class="hero-meta">Rotman Commerce • CFA Level I • Capital Markets</p>
     </div>
 </section>
 
@@ -255,6 +221,7 @@
 
         <div class="experience-list">
 
+            <!-- RBC -->
             <div class="experience-item">
                 <div class="experience-logo"><img src="images/rbc.png"></div>
                 <div class="experience-content">
@@ -268,32 +235,35 @@
                 </div>
             </div>
 
-            <div class="experience-item">
-                <div class="experience-logo"><img src="images/rtech.jfif"></div>
-                <div class="experience-content">
-                    <h3>RTech Solutions</h3>
-                    <div class="role">Financial Analyst</div>
-                    <ul>
-                        <li>Built financial models for budgeting, forecasting, and scenario analysis</li>
-                        <li>Analyzed operational data to identify cost drivers and inefficiencies</li>
-                        <li>Prepared management-ready financial reporting</li>
-                    </ul>
-                </div>
-            </div>
-
+            <!-- IG -->
             <div class="experience-item">
                 <div class="experience-logo"><img src="images/ig.png"></div>
                 <div class="experience-content">
                     <h3>IG Wealth Management</h3>
                     <div class="role">Commercial Banking Analyst Intern</div>
                     <ul>
-                        <li>Supported pricing strategy for a large mortgage portfolio</li>
-                        <li>Built dashboards tracking pricing and competitive trends</li>
-                        <li>Improved approval workflows for faster decisions</li>
+                        <li>Supported pricing and product strategy for a large mortgage portfolio</li>
+                        <li>Built dashboards tracking pricing trends</li>
+                        <li>Improved rate exception and approval workflows</li>
                     </ul>
                 </div>
             </div>
 
+            <!-- RTech -->
+            <div class="experience-item">
+                <div class="experience-logo"><img src="images/rtech.jfif"></div>
+                <div class="experience-content">
+                    <h3>RTech Solutions</h3>
+                    <div class="role">Financial Analyst</div>
+                    <ul>
+                        <li>Built financial models for budgeting, forecasting, and scenarios</li>
+                        <li>Analyzed cost drivers and operational inefficiencies</li>
+                        <li>Prepared management-ready financial reports</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- BMO -->
             <div class="experience-item">
                 <div class="experience-logo"><img src="images/bmo.jpg"></div>
                 <div class="experience-content">
@@ -301,8 +271,8 @@
                     <div class="role">Bank Teller</div>
                     <ul>
                         <li>Delivered regulated frontline banking services</li>
-                        <li>Built client trust through accuracy and discretion</li>
-                        <li>Developed strong operational and compliance foundation</li>
+                        <li>Built trust through accuracy and discretion</li>
+                        <li>Developed operational and compliance foundation</li>
                     </ul>
                 </div>
             </div>
@@ -314,16 +284,9 @@
 <section id="projects">
     <div class="container">
         <h2 style="text-align:center;">Projects</h2>
-
         <div class="projects-grid">
-            <div class="project-card">
-                <h4>Finance Project (Placeholder)</h4>
-                <p>DCF / portfolio analytics project.</p>
-            </div>
-            <div class="project-card">
-                <h4>Data Science Project (Placeholder)</h4>
-                <p>Predictive modeling and forecasting.</p>
-            </div>
+            <div class="project-card">Finance Project (Placeholder)</div>
+            <div class="project-card">Data Science Project (Placeholder)</div>
         </div>
     </div>
 </section>
@@ -340,6 +303,5 @@
 </section>
 
 </div>
-
 </body>
 </html>
