--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         }
 
         /* =====================
-           HERO
+           HERO (NAVY)
         ===================== */
 
         #top {
-            background: linear-gradient(135deg, #0E2342, #09182F);
-            color: white;
+            background: linear-gradient(135deg, #0B1F3A, #09182F);
+            color: #F0F4FF;
             text-align: center;
             padding: 4.5em 0 3.5em 0;
         }
@@ -73,17 +73,18 @@
         .hero-name {
             font-size: 3rem;
             font-weight: 700;
+            color: #F5F8FF;
         }
 
         .hero-subtitle {
             font-size: 1.05rem;
             margin-top: 0.6em;
-            color: #E2E8FF;
+            color: #D6E0FF;
         }
 
         .hero-meta {
             font-size: 0.9rem;
-            color: #B9C7E6;
+            color: #B7C5E6;
             margin-top: 0.4em;
         }
 
@@ -100,12 +101,17 @@
         }
 
         /* =====================
-           ABOUT
+           ABOUT (SECOND NAVY)
         ===================== */
 
         #about {
-            background: #F7F9FB;
+            background: #112C52;
             padding: 3em 0;
+            color: #E8EEFF;
+        }
+
+        #about h2 {
+            color: #F2F6FF;
         }
 
         .about-content {
@@ -114,6 +120,7 @@
             text-align: center;
             font-size: 0.95rem;
             line-height: 1.6;
+            color: #D3DEFF;
         }
 
         /* =====================
@@ -162,8 +169,9 @@
             width: 72px;
         }
 
+        /* Center company + role */
         .experience-content {
-            text-align: left;
+            text-align: center;
         }
 
         .experience-content h3 {
@@ -178,9 +186,12 @@
             margin: 0.25em 0 0.45em 0;
         }
 
+        /* Left-align bullets only */
         .experience-content ul {
-            margin: 0;
+            margin: 0.4em auto 0 auto;
             padding-left: 1em;
+            max-width: 640px;
+            text-align: left;
         }
 
         .experience-content ul li {
@@ -237,7 +248,7 @@
 <div id="header">
     <div class="top">
         <div id="logo">
-            <img src="images/headshot.jpg" alt="Ahmed Abdulrahman">
+            <img src="images/headshot.png" alt="Ahmed Abdulrahman">
             <h1>Ahmed Abdulrahman</h1>
             <p>Finance • Data Analytics<br>CFA Level I</p>
         </div>
