--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         }
 
         /* =====================
-           HERO (NAVY)
+           HERO (PRIMARY NAVY)
         ===================== */
 
         #top {
-            background: linear-gradient(135deg, #0B1F3A, #09182F);
+            background: linear-gradient(135deg, #081A33, #0C274A);
             color: #F0F4FF;
             text-align: center;
             padding: 4.5em 0 3.5em 0;
@@ -111,7 +111,7 @@
         }
 
         #about h2 {
-            color: #F2F6FF;
+            color: #FFFFFF;
         }
 
         .about-content {
@@ -169,9 +169,9 @@
             width: 72px;
         }
 
-        /* Center company + role */
+        /* Align company + role with section header */
         .experience-content {
-            text-align: center;
+            text-align: left;
         }
 
         .experience-content h3 {
@@ -186,12 +186,9 @@
             margin: 0.25em 0 0.45em 0;
         }
 
-        /* Left-align bullets only */
         .experience-content ul {
-            margin: 0.4em auto 0 auto;
+            margin: 0;
             padding-left: 1em;
-            max-width: 640px;
-            text-align: left;
         }
 
         .experience-content ul li {
@@ -210,18 +207,27 @@
             padding: 3em 0;
         }
 
-        .projects-grid {
+        .projects-section {
             max-width: 900px;
-            margin: 0 auto;
+            margin: 0 auto 2.5em auto;
+        }
+
+        .projects-section h3 {
+            margin-bottom: 0.8em;
+            color: #0B1F3A;
+        }
+
+        .projects-grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 1.5em;
+            gap: 1.2em;
         }
 
         .project-card {
             background: #F5F7FB;
             padding: 1.4em;
             border-radius: 10px;
+            font-size: 0.9rem;
         }
 
         /* =====================
@@ -300,9 +306,7 @@
         <div class="experience-list">
 
             <div class="experience-item">
-                <div class="experience-logo">
-                    <img src="images/rbc.png" class="rbc">
-                </div>
+                <div class="experience-logo"><img src="images/rbc.png" class="rbc"></div>
                 <div class="experience-content">
                     <h3>RBC Global Asset Management</h3>
                     <div class="role">Portfolio Analyst Intern</div>
@@ -315,9 +319,7 @@
             </div>
 
             <div class="experience-item">
-                <div class="experience-logo">
-                    <img src="images/ig.png" class="ig">
-                </div>
+                <div class="experience-logo"><img src="images/ig.png" class="ig"></div>
                 <div class="experience-content">
                     <h3>IG Wealth Management</h3>
                     <div class="role">Commercial Banking Analyst Intern</div>
@@ -330,9 +332,7 @@
             </div>
 
             <div class="experience-item">
-                <div class="experience-logo">
-                    <img src="images/rtech.jfif" class="rtech">
-                </div>
+                <div class="experience-logo"><img src="images/rtech.jfif" class="rtech"></div>
                 <div class="experience-content">
                     <h3>RTech Solutions</h3>
                     <div class="role">Financial Analyst</div>
@@ -345,9 +345,7 @@
             </div>
 
             <div class="experience-item">
-                <div class="experience-logo">
-                    <img src="images/bmo.jpg" class="bmo">
-                </div>
+                <div class="experience-logo"><img src="images/bmo.jpg" class="bmo"></div>
                 <div class="experience-content">
                     <h3>Bank of Montreal (BMO)</h3>
                     <div class="role">Bank Teller</div>
@@ -366,10 +364,39 @@
 <section id="projects">
     <div class="container">
         <h2 style="text-align:center;">Projects</h2>
-        <div class="projects-grid">
-            <div class="project-card">Finance Project (Placeholder)</div>
-            <div class="project-card">Data Science Project (Placeholder)</div>
+
+        <div class="projects-section">
+            <h3>Finance</h3>
+            <div class="projects-grid">
+                <div class="project-card">Finance Project 1 (Placeholder)</div>
+                <div class="project-card">Finance Project 2 (Placeholder)</div>
+            </div>
         </div>
+
+        <div class="projects-section">
+            <h3>Economics</h3>
+            <div class="projects-grid">
+                <div class="project-card">Economics Project 1 (Placeholder)</div>
+                <div class="project-card">Economics Project 2 (Placeholder)</div>
+            </div>
+        </div>
+
+        <div class="projects-section">
+            <h3>Data Science</h3>
+            <div class="projects-grid">
+                <div class="project-card">Data Science Project 1 (Placeholder)</div>
+                <div class="project-card">Data Science Project 2 (Placeholder)</div>
+            </div>
+        </div>
+
+        <div class="projects-section">
+            <h3>Data Analytics</h3>
+            <div class="projects-grid">
+                <div class="project-card">Data Analytics Project 1 (Placeholder)</div>
+                <div class="project-card">Data Analytics Project 2 (Placeholder)</div>
+            </div>
+        </div>
+
     </div>
 </section>
 
